--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        run: npm run build --base /ncgm-slides/
+        run: npm run gh-build
       - name: Generate PDF
         run: npm run export
       - name: Merge assets
