--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm run export
       - name: Merge assets
         run: |
-          cp -r images/* dist/assets/
+          cp -r assets/* dist/assets/
           cp slides-export.pdf dist/
       - name: Deploy pages
         uses: crazy-max/ghaction-github-pages@v2
